@@ -27,7 +27,7 @@ package() {
   install -Dm 0755 -o root "../binsrc/runinwsl/bin/Release/net5.0/linux-x64/publish/runinwsl" -t "${pkgdir}/usr/libexec/genie"
 
   # Environment generator.
-  install -Dm 0755 -o root "../othersrc/scripts/10-genie-envar.sh" -t "${pkgdir}/usr/libexec/genie"
+  install -Dm 0755 -o root "../othersrc/scripts/80-genie-envar.sh" -t "${pkgdir}/usr/libexec/genie"
 
   # Configuration file.
   install -Dm 0644 -o root "../othersrc/etc/genie.ini" -t "${pkgdir}/etc"
@@ -39,8 +39,8 @@ package() {
   # 10-genie-envar.sh symlinks
   mkdir -p ${pkgdir}/usr/lib/systemd/user-environment-generators
   mkdir -p ${pkgdir}/usr/lib/systemd/system-environment-generators
-  ln -s /usr/libexec/genie/10-genie-envar.sh ${pkgdir}/usr/lib/systemd/user-environment-generators/10-genie-envar.sh
-  ln -s /usr/libexec/genie/10-genie-envar.sh ${pkgdir}/usr/lib/systemd/system-environment-generators/10-genie-envar.sh
+  ln -s /usr/libexec/genie/80-genie-envar.sh ${pkgdir}/usr/lib/systemd/user-environment-generators/80-genie-envar.sh
+  ln -s /usr/libexec/genie/80-genie-envar.sh ${pkgdir}/usr/lib/systemd/system-environment-generators/80-genie-envar.sh
 
 	# Unit files.
   install -Dm 0644 -o root "../othersrc/lib-systemd-system/wslg-xwayland.service" -t "${pkgdir}/usr/lib/systemd/system"
