@@ -1,3 +1,3 @@
 /usr/libexec/genie/genie /usr/bin/genie
-/usr/libexec/genie/10-genie-envar.sh /usr/lib/systemd/system-environment-generators/10-genie-envar.sh
-/usr/libexec/genie/10-genie-envar.sh /usr/lib/systemd/user-environment-generators/10-genie-envar.sh
+/usr/libexec/genie/80-genie-envar.sh /usr/lib/systemd/system-environment-generators/80-genie-envar.sh
+/usr/libexec/genie/80-genie-envar.sh /usr/lib/systemd/user-environment-generators/80-genie-envar.sh
