@@ -29,9 +29,9 @@ package:
 	ln -s $(INSTALLDIR)/genie $(BINDIR)/genie
 
 	# Environment generator.
-	install -Dm 0755 -o root "othersrc/scripts/10-genie-envar.sh" -t "$(INSTALLDIR)"
-	ln -s $(INSTALLDIR)/10-genie-envar.sh $(ENVGENDIR)/10-genie-envar.sh
-	ln -s $(INSTALLDIR)/10-genie-envar.sh $(USRENVGENDIR)/10-genie-envar.sh
+	install -Dm 0755 -o root "othersrc/scripts/80-genie-envar.sh" -t "$(INSTALLDIR)"
+	ln -s $(INSTALLDIR)/80-genie-envar.sh $(ENVGENDIR)/80-genie-envar.sh
+	ln -s $(INSTALLDIR)/80-genie-envar.sh $(USRENVGENDIR)/80-genie-envar.sh
 
 	# Configuration file.
 	install -Dm 0644 -o root "othersrc/etc/genie.ini" -t "$(ETCDIR)"
