@@ -1,6 +1,7 @@
 systemd-genie (1.40) buster bullseye bookworm sid focal bionic; urgency=medium
 
         * Moved generic Linux/WSL functionality into shared assembly.
+        * Upnumbered genie-envar to fix missing path cloning on some systems.
 
  -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 18:00:00 -0500
 
